# obake

./: .gitignore  Cargo.toml  README.md
.github/workflows/: obake.yml
obake/: Cargo.toml
obake/src/: lib.rs
obake/tests/: derive.rs  inherit.rs  migrations.rs
obake/tests/ui/: bad_attrs.rs  bad_attrs.stderr  bad_helpers.rs  bad_helpers.stderr  bad_inherits.rs  bad_inherits.stderr  duplicate_version.rs  duplicate_version.stderr  generics.rs  generics.stderr  items.rs  items.stderr  no_version.rs  no_version.stderr  semver.rs  semver.stderr
obake_macros/: Cargo.toml
obake_macros/src/: expand.rs  internal.rs  lib.rs  parse.rs
ver/: Cargo.toml
ver/src/: lib.rs
ver_derive/: Cargo.toml
ver_derive/src/: lib.rs
