[package]
name = "obake"
authors = ["Nathan Corbyn <me@nathancorbyn.com>"]
version = "1.0.4"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Versioned data-structures for Rust"
homepage = "https://github.com/doctorn/obake"
repository = "https://github.com/doctorn/obake"
documentation = "https://docs.rs/obake/"
keywords = ["versioning", "config", "serialization", "no_std"]
categories = ["config"]
readme = "../README.md"
include = ["Cargo.toml", "src/**/*.rs", "../README.md", "../LICENSE-APACHE", "../LICENSE-MIT"]

[lib]
name = "obake"

[dependencies]
obake_macros = { path = "../obake_macros", version = "1.0" }

[dev-dependencies]
trybuild = "1.0"
obake_macros = { path = "../obake_macros", version = "1.0", features = ["serde"] }

[features]
default = []
serde = ["obake_macros/serde"]
